--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ a:hover{
 
 .typewriter {
     position: relative;
-    background: url(photos/typewriter3.png);
+    background: url(photos/typewriter3%20-%20Copy.png);
     bottom: 800px;
     height: 850px;
     left: 80px;
